--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,7 @@ body, html {
 
 .btn-news {
     position: absolute;
+    bottom: 15px;
 }
 
 /***************************** Footer**/
@@ -112,14 +113,37 @@ body, html {
 
 /***************************** Media Queries**/
 
+@media (max-width: 991px){
+    .card-news {
+       height: 580px;
+    }
+   
+    .news-image {
+        height: 500px;
+    }
+   
+   .card-body {
+       height: 210px;
+   }
+    
+}
+
+@media (max-width: 595px) {
+     .card-body {
+       height: 300px;
+}
+}
+
 @media (min-width: 769px) {
         .home-quote { 
             padding: 24px 50px;
             margin-top: 100px;
             margin-left: 70px;
-    }
+        }
        
 }
+
+
 
 @media (min-width: 1200px){
 .news-container {
