--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
 /***************************** Special paddings/margins/text**/
 
-body, html {
+body,
+html {
     height: 100%;
+    font-family: 'Open Sans', sans-serif;
     text-align: justify;
 }
 
@@ -16,73 +18,129 @@ body, html {
 .h3-title {
     text-align: center;
     text-transform: uppercase;
-    padding: 40px 0
-    
+    padding: 40px 0 20px 0;
+    font-weight: 700;
 }
+
+.container {
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 50px;
+}
+
+.background-image {
+    min-height: 107vh;
+    width: 100%;
+    display: block;
+    background-size: cover;
+    padding-top: 20px;
+    background-position: center;
+    position: relative;
+    background-attachment: fixed;
+}
+
+.background-image-quote {
+    background: #0040857a;
+    color: white;
+    width: 80%;
+    margin: auto;
+    padding: 24px 50px;
+    text-align: left;
+}
+.background-image-quote h3 {
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.background-quote-about p {
+    font-size: 15px;
+}
+
+.full-text {
+    padding: 20px 20px;
+    text-align: center;
+}
+
+.half-text {
+    padding: 30px 20px;
+    text-align: right;
+}
+
+.half-text h5 {
+     font-weight: 700;
+}
+
+.image-caption {
+    font-size: 13px;
+    color: #666;
+    padding: .2em .6em;
+    font-style: italic;
+    font-weight: 300;
+}
+
 
 /***************************** Header**/
 
-
 .header__logo {
-    height: 60px;
-    width: 60px;
+    height: 45px;
+    width: 45px;
     border-radius: 50%;
     background-color: white;
-    background-image: url("../images/logo.png"); 
+    background-image: url("../images/logo.png");
     background-size: cover;
     background-position-y: -10px;
+}
+.bg-light {
+    background-color: #273e57!important;
 }
 
 .header-navigation {
     margin-left: auto;
 }
 
-.navbar-light .navbar-brand {
+.navbar-light .navbar-toggler {
+    border-color: transparent;
+    background: #f8f9fa;
+    padding: 2px 6px;
+}
+
+.navbar-light .navbar-toggler-icon{
+}
+
+.button:focus {
+    outline: none;
+}
+
+.navbar-light .navbar-brand,
+.navbar-light .navbar-brand:hover {
     padding-left: 30px;
+    color: #fff;
 }
 
 
+.navbar-light .navbar-nav .active>.nav-link { 
+    color: #fff;
+}
+
+.navbar-light .navbar-nav .active>.nav-link:hover { 
+    color: #d99901;
+    transition: ease-in-out 1s;
+}
 
 /***************************** Home**/
 
 .home {
     background-image: url("../images/home-image.jpg");
-    height: 100%;
-    width: 100%;
-    background-size: cover;
-    padding-top: 20px;
-    background-position: center;
 }
 
 .home-quote {
-    background: #0040857a;
-    color: white;
-    width: 80%;
-    margin: auto;
-    padding: 24px 50px;
     max-width: 500px;
 }
 
+
+/***************************** What we do**/
+
 /***************************** About**/
-
-
-
-.container-about {
-    padding-left: 20px;
-    padding-right: 20px;
-}
-    
-.text-about {
-    padding: 20px 20px;
-}
-
-.half-text-about {
-    padding: 30px 20px;
-}
-
-.full-text-about {
-    padding: 20px 20px;
-}
 
 .half-image {
     width: 100%;
@@ -95,9 +153,10 @@ body, html {
 .full-image {
     width: 100%;
     height: auto;
-    margin:auto;
+    margin: auto;
     display: block;
     padding: 30px 0;
+    max-width: 50%;
 }
 
 .caption-about {
@@ -106,46 +165,60 @@ body, html {
     padding-right: 10px;
     font-weight: 200;
 }
+
 .quote-about {
-    padding: 20px 80px;
+    padding: 35px 25px 40px 45px;
+    text-align: left;
 }
 
+.background-image-about {
+    background-image: url("../images/about/background-about.png");
+}
 
-
-
+.background-quote-about {
+    right: 100px;
+    top: 100px;
+}
 
 /***************************** News**/
 
-.news {
+.news-container {
     height: auto;
     width: 100%;
-    background-color: pink;
     padding: 20px;
 }
-
 
 .card-news {
     height: 430px;
     position: relative;
     margin: 15px auto;
 }
+
+.card-body {
+    text-align: left;
+}
+
+.card-title {
+    font-weight: 700;
+}
+
 .news-image {
     width: 100%;
-    height:200px;
+    height: 200px;
     background-position: center;
-    background-size: cover; 
+    background-size: cover;
 }
 
 .news-image1 {
-     background-image: url("../images/news/1.jpg");
+    background-image: url("../images/news/1.jpg");
 }
 
 .news-image2 {
-     background-image: url("../images/news/2.jpg");
+    background-image: url("../images/news/2.jpg");
 }
 
 .news-image3 {
-     background-image: url("../images/news/3.jpg");
+    background-image: url("../images/news/3.jpg");
 }
 
 .btn-news {
@@ -153,10 +226,48 @@ body, html {
     bottom: 15px;
 }
 
-/***************************** Contact-us**/
-.contact-us {
-    background-color: green;
+.background-image-news {
+    background-image: url("../images/news/background-image-news.jpg");
 }
+
+.background-quote-news {
+    
+}
+
+/***************************** Donate**/
+
+.donation-btn {
+    text-align: center;
+}
+
+.donation-btn-style {
+    min-width: 70px;
+    margin-bottom: 6px;
+}
+
+/***************************** Contact-us**/
+
+.row-contact-us .half-text h6 { 
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.row-contact-us .half-text p { 
+    font-size: .8rem;
+}
+
+.center-form {
+    padding-bottom: 30px;
+}
+
+.form-control {
+    margin: 20px 0;
+}
+
+.half-map {
+    padding-bottom: 30px;
+}
+
 
 /***************************** Footer**/
 
@@ -167,51 +278,63 @@ body, html {
 
 
 /***************************** Media Queries**/
-@media (max-width: 575.98px) {
-    
-    
-}
 
-
-@media (max-width: 991px){
+@media (max-width: 991px) {
     .card-news {
-       height: 580px;
+        height: 580px;
     }
-   
+
     .news-image {
         height: 500px;
     }
-   
-   .card-body {
-       height: 210px;
-   }
+
+    .card-body {
+        height: 210px;
+    }
     
+    .full-image {
+        max-width: 90%;
+}
+
 }
 
 @media (max-width: 595px) {
-     .card-body {
-       height: 300px;
-}
+    .card-body {
+        height: 300px;
+    }
 }
 
 @media (min-width: 769px) {
-        .home-quote { 
-            padding: 24px 50px;
-            margin-top: 100px;
-            margin-left: 70px;
-        }
-       
+    .home-quote {
+        padding: 24px 50px;
+        right: 150px;
+        bottom: 200px;
+    }
+
+    .container-contact-us {
+        max-width: 60%;
+    }
+    
+    .navbar {
+        height: 50px;
 }
 
-
-
-@media (min-width: 1200px){
-.news-container {
-    max-width: 1000px;
-}
-.container-about {
-    max-width: 60%;
-}
 }
 
+@media (min-width: 992px) {
+    .background-image-quote {
+        position: absolute;
+}
+    
+}
 
+@media (min-width: 1200px) {
+    .news-container {
+        max-width: 1100px;
+    }
+
+    .container-about {
+        max-width: 80%;
+    }
+    
+}
