--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@ html {
     margin: auto;
     padding: 24px 50px;
     text-align: left;
+    margin-top: 80px;
 }
 .background-image-quote h3 {
     font-weight: 700;
@@ -54,6 +55,7 @@ html {
 
 .background-quote-about p {
     font-size: 15px;
+    margin-top: 55px;
 }
 
 .full-text {
@@ -68,6 +70,11 @@ html {
 
 .half-text h5 {
      font-weight: 700;
+}
+
+.full-image-text {
+        padding: 10px 24px 0;
+        text-align: center;
 }
 
 .image-caption {
@@ -135,6 +142,7 @@ html {
 
 .home-quote {
     max-width: 500px;
+    margin-top: 50px;
 }
 
 
