--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,13 @@ html {
     height: 100%;
     font-family: 'Roboto', sans-serif;
     text-align: justify;
+    color: #34495e;
 }
+
+a:link {
+  text-decoration: none;
+}
+
 
 .uppercase {
     text-transform: uppercase;
@@ -20,6 +26,11 @@ html {
     text-transform: uppercase;
     padding: 30px 0 20px 0;
     font-weight: 700;
+    color: #d99901;
+}
+
+.about-huemul, .contact-us {
+    background-color: #f5f5f5;
 }
 
 .container {
@@ -39,22 +50,34 @@ html {
     background-attachment: fixed;
 }
 
+.transparent-overlay {
+    height: 100%;
+    width: 100%;
+    /*background-color: rgba(255,255,255,0.2);*/
+    position: absolute;
+    top:0;
+    left: 0;
+}
+
 .background-image-quote {
-    background: #0040857a;
-    color: white;
+    background: #f1f1f1c9;
+    color: #252525;
     width: 80%;
     margin: auto;
     padding: 24px 50px;
     text-align: left;
     margin-top: 80px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    letter-spacing: 3px;
 }
 
 .background-image-quote h3 {
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .background-quote-about p {
-    font-size: 15px;
+    font-size: 25px;
     margin-top: 55px;
 }
 
@@ -108,6 +131,15 @@ html {
     transition: ease-in-out 1s;
 }
 
+.navbar-dark .navbar-brand {
+    color: #e9ecef;
+}
+
+.navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-link {
+    color: #e9ecef;
+}
+
+
 /***************************** Home**/
 
 .home {
@@ -129,7 +161,7 @@ html {
     height: auto;
     margin: auto;
     display: block;
-    padding: 30px 10px 0;
+    padding: 10px;
 }
 
 .full-image {
@@ -149,7 +181,7 @@ html {
 }
 
 .quote-about {
-    padding: 35px 25px 40px 45px;
+    padding: 10px 25px 40px 45px;
     text-align: left;
 }
 
@@ -170,6 +202,10 @@ html {
     padding: 20px;
 }
 
+.card {
+        border: none;
+}
+
 .card-news {
     height: 430px;
     position: relative;
@@ -178,6 +214,8 @@ html {
 
 .card-body {
     text-align: left;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 .card-title {
@@ -321,10 +359,15 @@ html {
     .background-image-quote {
         position: absolute;
     }
-    
-.half-text {
-    padding-top: 34px;
 
+.row-about {
+    padding-top: 25px;
+    padding-bottom: 20px;
+}
+
+.h3-title { 
+    padding: 55px 0 20px 0;
+}
 }
 
 @media (min-width: 1200px) {
